--- a/Desafio-2/package.json
+++ b/Desafio-2/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "desafio-2",
+  "name": "handsonlab",
   "version": "1.0.0",
   "description": "",
-  "main": "ProductManager.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
